# ClangToStringTemplate

./: .gitignore  LICENSE  LICENSES  README.md  config-sample.json  setup.sh
CppGeneratorTool/: dependency-reduced-pom.xml  pom.xml  setup.sh
CppGeneratorTool/src/main/java/ClangAST/: ClangAST.java
CppGeneratorTool/src/main/java/CommandLineParser/: CommandLineParser.java
CppGeneratorTool/src/main/java/Generator/: Generator.java
CppGeneratorTool/src/main/java/InterfaceAST/: InterfaceAST.java
CppGeneratorTool/src/main/java/Utils/: Utils.java
CppGeneratorTool/src/main/java/com/azul/: Main.java
CppGeneratorTool/src/main/java/org/example/: Main.java
CppGeneratorTool/src/main/resources/: ExampleHeader.stg  ExampleSource.stg  MockHeader.stg  MockSource.stg
CppGeneratorTool/src/test/java/ClangASTTest/: ClangASTTest.java
CppGeneratorTool/src/test/java/GeneratorTest/: GeneratorTest.java
CppGeneratorTool/src/test/java/InterfaceASTTest/: InterfaceASTTest.java
Test_Application/: CMakeLists.txt  run_tests.sh
Test_Application/include/: AltType.h  Foo.h  FooWrapper.h  Function.h  FunctionWrapper.h  GeneratedIFoo.h  IFoo.h  IFunction.h  IParameterType.h  IReturnType.h  ParameterType.h  ParameterTypeWrapper.h  ReturnType.h  ReturnTypeWrapper.h
Test_Application/src/: IFoo.cpp  IFunction.cpp  IParameterType.cpp  IReturnType.cpp  ParameterType.cpp  main.cpp
Test_Application/tests/Test_Foo/: Test_Foo.cpp
Test_Application/tests/Test_Function/: Test_Function.cpp
Test_Application/tests/Test_ParameterType/: Test_ParameterType.cpp
Test_Application/tests/Test_ReturnType/: Test_ReturnType.cpp
cpp-gen/: config.json  cpp-gen.py  run_tests.py
cpp-gen/autoload/: cpp_gen.vim
cpp-gen/plugin/: cpp-gen.vim
cpp-gen/py/: generator.py  parser.py  util.py
cpp-gen/tests/: Test_CppParser.py  Test_Full.py  Test_Generator.py
cpp-gen/tests/include/Bar/: Bar.h
cpp-gen/tests/test_files/include/: IFoo.h  IInvalid.h
cpp-gen/tests/test_files/src/: Foo.cpp  IFoo.cpp  IInvalid.cpp
